--- a/docker-jackett.service
+++ b/docker-jackett.service
@@ -13,8 +13,8 @@ ExecStart=/usr/bin/docker run --rm \
   -e PGID=3000 \
   -e TZ=America/Chicago \
   -p 9117:9117 \
-  -v /home/matt/jackett/config:/config \
-  -v /home/matt/jackett/downloads:/downloads \
+  -v ~/jackett/config:/config \
+  -v ~/jackett/downloads:/downloads \
   linuxserver/jackett
 
 ExecStop=/usr/bin/docker stop jackett
