--- a/docker-radarr.service
+++ b/docker-radarr.service
@@ -9,8 +9,8 @@ RestartSec=30
 
 ExecStart=/usr/bin/docker run --rm \
   --name=radarr \
-  -v /home/matt/radarr/config:/config \
-  -v /home/matt/media/movies:/movies \
+  -v ~/radarr/config:/config \
+  -v ~/media/movies:/movies \
   -e PGID=1000 -e PUID=1000 \
   -e TZ=America/Chicago \
   -p 7878:7878 \
