--- a/homeserver/systemd/docker-nzbhydra2.service
+++ b/homeserver/systemd/docker-nzbhydra2.service
@@ -6,8 +6,9 @@ After=docker.service
 [Service]
 Restart=always
 RestartSec=30
-
-ExecStart=/usr/bin/docker run --rm \
+ExecStartPre=-/usr/bin/docker stop nzbhydra2
+ExecStartPre=-/usr/bin/docker rm nzbhydra2
+ExecStart=/usr/bin/docker run \
   --name=nzbhydra2 \
   -e PUID=1000 \
   -e PGID=1000 \
@@ -16,7 +17,6 @@ ExecStart=/usr/bin/docker run --rm \
   -v /volumes/nzbhydra2/config:/config \
   -v /volumes/nzbhydra2/downloads:/downloads \
 linuxserver/nzbhydra2
-
 ExecStop=/usr/bin/docker stop nzbhydra2
 
 [Install]
