--- a/homeserver/systemd/docker-radarr.service
+++ b/homeserver/systemd/docker-radarr.service
@@ -6,8 +6,9 @@ After=docker.service
 [Service]
 Restart=always
 RestartSec=30
-
-ExecStart=/usr/bin/docker run --rm \
+ExecStartPre=-/usr/bin/docker stop radarr
+ExecStartPre=-/usr/bin/docker rm radarr
+ExecStart=/usr/bin/docker run \
   --name=radarr \
   -v /volumes/radarr/config:/config \
   -v /mnt:/mnt \
@@ -15,8 +16,7 @@ ExecStart=/usr/bin/docker run --rm \
   -e PUID=1000 \
   -e TZ=America/Chicago \
   -p 7878:7878 \
-  linuxserver/radarr
-
+linuxserver/radarr
 ExecStop=/usr/bin/docker stop radarr
 
 [Install]
