--- a/homeserver/systemd/docker-sonarr.service
+++ b/homeserver/systemd/docker-sonarr.service
@@ -6,8 +6,9 @@ After=docker.service
 [Service]
 Restart=always
 RestartSec=30
-
-ExecStart=/usr/bin/docker run --rm \
+ExecStartPre=-/usr/bin/docker stop sonarr
+ExecStartPre=-/usr/bin/docker rm sonarr
+ExecStart=/usr/bin/docker run \
   --name=sonarr \
   -e PUID=1000 \
   -e PGID=1000 \
@@ -17,7 +18,6 @@ ExecStart=/usr/bin/docker run --rm \
   -v /volumes/sonarr/config:/config \
   -v /mnt:/mnt \
 linuxserver/sonarr
-
 ExecStop=/usr/bin/docker stop sonarr
 
 [Install]
